--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sunsick Moon</title>
+    <title>SunSick Moon – Fine Dining From the Streets</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
